--- a/index.html
+++ b/index.html
@@ -2,122 +2,221 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./assets/css/index.css">
-    <!-- <link rel="stylesheet" href="./assets/css/all.css"> -->
-    <link defer src="./assets/js/all.js">
-    <script src="https://use.fontawesome.com/3d6ec8d984.js"></script>
+  <link rel="stylesheet" href="./assets/css/index.css">
+  <!-- <link rel="stylesheet" href="./assets/css/all.css"> -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-
-    <title>Shoerealist</title>
+  <title>Shoerealist</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Shoerealist</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Shoerealist</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Services
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Deep Cleaning</a>
-                            <a class="dropdown-item" href="#">One Day Cleaning</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">More Services</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacts</a>
-                    </li>                  
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/images/img1.JPG" class="d-block w-100" alt="img1">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/img2.JPG" class="d-block w-100" alt="img2">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/img3.JPG" class="d-block w-100" alt="img3">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Services
             </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Deep Cleaning</a>
+              <a class="dropdown-item" href="#">One Day Cleaning</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">More Services</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacts</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/images/img1.JPG" class="d-block w-100" alt="img1">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>SHOEREALIST</h3>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           </div>
-          <div class="container-fluid">
-            <div class="row row-cols-4">
-              <div class="col-lg-3 col-md-2 col-sm-12"><img src="./assets/images/img4.JPG" alt="img4" class="img-fluid"></div>
-              <div class="col-lg-3 col-md-2 col-sm-12"><img src="./assets/images/img5.JPG" alt="img5" class="img-fluid"></div>
-              <div class="col-lg-3 col-md-2 col-sm-12"><img src="./assets/images/img6.JPG" alt="img6" class="img-fluid"></div>
-              <div class="col-lg-3 col-md-2 col-sm-12"><img src="./assets/images/img7.JPG" alt="img7" class="img-fluid"></div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/images/img2.JPG" class="d-block w-100" alt="img2">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>SHOEREALIST</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/images/img3.JPG" class="d-block w-100" alt="img3">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>SHOEREALIST</h3>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 padding-0">
+          <div class="card bg-dark text-white">
+            <img src="./assets/images/img4.JPG" class="card-img" alt="img4">
+            <div class="card-img-overlay img-fluid">
+              <h5 class="card-title">SHOEREALIST</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium, nesciunt
+                magnam laborum exercitationem ab culpa quasi nam quaerat modi nemo architecto, asperiores consequatur,
+                recusandae minus ratione est dolore cupiditate.</p>
+              <button type="button" class="btn btn-link">More Info</button>
             </div>
           </div>
-    </main>
-    <footer>
-        <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-4 col-md-2 col-sm-12">
-                <h3>Contacts</h3>
-              </div>
-              <div class="col-lg-4 col-md-2 col-sm-12">
-                <h3>Free Pick Up & Delivery</h3>
-              </div>
-              <div class="col-lg-4 col-md-2 col-sm-12">
-                <h3>081-XXXX-XXXX</h3>
-              </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 padding-0">
+          <div class="card bg-dark text-white">
+            <img src="./assets/images/img5.JPG" class="card-img" alt="img5">
+            <div class="card-img-overlay img-fluid">
+              <h5 class="card-title">SHOEREALIST</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium, nesciunt
+                magnam laborum exercitationem ab culpa quasi nam quaerat modi nemo architecto, asperiores consequatur,
+                recusandae minus ratione est dolore cupiditate.</p>
+              <button type="button" class="btn btn-link">More Info</button>
             </div>
           </div>
-    </footer>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 padding-0">
+          <div class="card bg-dark text-white">
+            <img src="./assets/images/img6.JPG" class="card-img" alt="img6">
+            <div class="card-img-overlay img-fluid">
+              <h5 class="card-title">SHOEREALIST</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium, nesciunt
+                magnam laborum exercitationem ab culpa quasi nam quaerat modi nemo architecto, asperiores consequatur,
+                recusandae minus ratione est dolore cupiditate.</p>
+              <button type="button" class="btn btn-link">More Info</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 padding-0">
+          <div class="card bg-dark text-white">
+            <img src="./assets/images/img7.JPG" class="card-img" alt="img7">
+            <div class="card-img-overlay img-fluid">
+              <h5 class="card-title">SHOEREALIST</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium, nesciunt
+                magnam laborum exercitationem ab culpa quasi nam quaerat modi nemo architecto, asperiores consequatur,
+                recusandae minus ratione est dolore cupiditate.</p>
+              <button type="button" class="btn btn-link">More Info</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+          <i class="fas fa-bullseye fa-5x"></i>
+          <h3>About</h3>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+          <i class="fas fa-motorcycle fa-5x"></i>
+          <h3>Free Pick Up & Delivery</h3>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+          <i class="fas fa-phone-square-alt fa-5x"></i>
+          <h3>081-XXXX-XXXX</h3>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-2 col-md-2 col-sm-12 foot"></div>
+        <div class="col-lg-2 col-md-2 col-sm-12 foot">
+          <h5>Site Map</h5>
+          <button type="button" class="btn btn-link">Home</button><br>
+          <button type="button" class="btn btn-link">Services</button><br>
+          <button type="button" class="btn btn-link">Contacts</button>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-12 foot">
+          <h5>Branch</h5>
+          <p>
+            Jakarta <br>
+            Bekasi <br>
+            Tangerang <br>
+            Bogor <br>
+            Depok <br>
+          </p>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12 foot">
+          <button type="button" class="btn btn-link"><i class="fab fa-facebook fa-2x"></i></button>
+          <button type="button" class="btn btn-link"><i class="fab fa-instagram-square fa-2x"></i></button>
+          <button type="button" class="btn btn-link"><i class="fab fa-whatsapp-square fa-2x"></i></button>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 copyrights">
+          <h6>Copyrights 2020</h6>
+        </div>
+      </div>
+  </footer>
+
+  <script src="./assets/js/all.js"></script>
+  <script src="https://use.fontawesome.com/3d6ec8d984.js"></script>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
-
 </html>
